# rust-simple-di

./: Cargo.toml  README.md
examples/: usage.rs
src/: container.rs  lib.rs  macros.rs
